--- a/Routing/ngRoute/index.html
+++ b/Routing/ngRoute/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title></title>
     <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular-route.js"></script>
+
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+    <a href="#/">Home</a>
+    <a href="#/posts">Posts</a>
+    <ng-view></ng-view>
 
 </body>
 </html>
